# learning-rust

./: Cargo.toml  README.md
src/: main.rs
src/chapter_10/1_generic_data_types/: 2_example.rs  4_example.rs
src/chapter_2/: example_1.rs  example_2.rs  example_3.rs  example_4.rs  example_5.rs  example_6.rs  example_7.rs  example_8.rs
src/chapter_3/: 1_variables_and_mutability.rs  3_variables_and_mutability.rs  4_variables_and_mutability.rs
src/chapter_3/1_variables_and_mutability/: 1_variables_and_mutability.rs  2_variables_and_mutability.rs  4_variables_and_mutability.rs  5_variables_and_mutability.rs
src/chapter_3/2_data_types/: 10_data_types.rs  13_data_types.rs  14_data_types.rs  15_data_types.rs  16_data_types.rs  17_data_types.rs  21_data_types.rs  22_data_types.rs  25_data_types.rs  27_data_types.rs  28_data_types.rs  29_data_types.rs  2_data_types.rs  32_data_types.rs  3_data_types.rs  5_data_types.rs  6_data_types.rs  8_data_types.rs  9_data_types.rs
src/chapter_3/3_functions/: 11_data_types.rs  12_data_types.rs  19_data_types.rs
src/chapter_3/4_comments/: 20_data_types.rs
src/chapter_3/5_control_flow/: 31_data_types.rs
src/chapter_4/1_what_is_ownership/: 10_exmaple.rs  11_exmaple.rs  12_exmaple.rs  1_exmaple.rs  2_exmaple.rs  3_exmaple.rs  4_exmaple.rs  5_exmaple.rs  6_exmaple.rs  7_exmaple.rs  8_exmaple.rs  9_exmaple.rs
src/chapter_4/2_references_and_borrowing/: 10_example.rs  1_example.rs  2_example.rs  3_example.rs  4_example.rs  5_example.rs  6_example.rs  7_example.rs  8_example.rs  9_example.rs
(+92 files in other folders)
