workspace = { members = [ "src/chapter_7/2_defining_modules_to_control_scope_and_privacy/2_example/restaurant","src/chapter_7/2_defining_modules_to_control_scope_and_privacy/backyard"] }
[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
